add cursor-pointer to li

--- a/src/app/shared/components/navBar/navBar.component.html
+++ b/src/app/shared/components/navBar/navBar.component.html
@@ -6,7 +6,7 @@
 
     @for (item of navBarData ; track $index) {
       <li>
-        <a routerLink="/" class=" font-bold  text-white"> {{ item.name }}</a>
+        <a routerLink="/" class=" font-bold  text-white cursor-pointer"> {{ item.name }}</a>
       </li>
     }
 
