--- a/src/app/test/test-page/test-page.component.html
+++ b/src/app/test/test-page/test-page.component.html
@@ -1,35 +1,35 @@
 <div class="container mx-auto p-4">
-    <h1 class="text-2xl font-bold mb-6">Ejemplo de Stepper</h1>
-    
-    <app-stepper 
-      [steps]="mySteps" 
-      [currentStep]="activeStep"
-      (stepChange)="onStepChange($event)">
-      
-      <!-- Contenido personalizado para cada paso -->
-      <ng-template #content1>
-        <div class="text-center p-4">
-          <h2 class="text-xl mb-2">Bienvenido al primer paso</h2>
-          <p>Este es un contenido personalizado para el paso 1</p>
-        </div>
-      </ng-template>
-      
-      <ng-template #content2>
-        <p>puto</p>
-      </ng-template>
-      
-      <ng-template #content3>
-        <div class="text-center p-4">
-          <h2 class="text-xl mb-2">Estas Apunto de completarlo</h2>
-          <p>Ya casi completa los pasos</p>
-        </div>
-      </ng-template>
-  
-      <ng-template #content4>
-        <div class="text-center p-4">
-          <h2 class="text-xl mb-2">¡Completado!</h2>
-          <p>Has completado todos los pasos</p>
-        </div>
-      </ng-template>
-    </app-stepper>
-  </div>
+  <h1 class="text-2xl font-bold mb-6">Ejemplo de Stepper</h1>
+
+  <app-stepper
+    [steps]="mySteps"
+    [currentStep]="activeStep"
+    (stepChange)="onStepChange($event)"
+  >
+    <!-- Contenido personalizado para cada paso -->
+    <ng-template #content1>
+      <div class="text-center p-4">
+        <h2 class="text-xl mb-2">Bienvenido al primer paso</h2>
+        <p>Este es un contenido personalizado para el paso 1</p>
+      </div>
+    </ng-template>
+
+    <ng-template #content2>
+      <p>puto</p>
+    </ng-template>
+
+    <ng-template #content3>
+      <div class="text-center p-4">
+        <h2 class="text-xl mb-2">Estas Apunto de completarlo</h2>
+        <p>Ya casi completa los pasos</p>
+      </div>
+    </ng-template>
+
+    <ng-template #content4>
+      <div class="text-center p-4">
+        <h2 class="text-xl mb-2">¡Completado!</h2>
+        <p>Has completado todos los pasos</p>
+      </div>
+    </ng-template>
+  </app-stepper>
+</div>
