--- a/src/app/auth/components/register-form/register-form.component.html
+++ b/src/app/auth/components/register-form/register-form.component.html
@@ -1,15 +1,14 @@
 <div class="w-full h-full flex items-center justify-center">
     <div class="w-full max-w-md px-8 overflow-y-auto max-h-full py-6">
-     
+  
       <div class="mb-8 flex justify-center">
         <img src="img/logo.webp" alt="Logo Flecha Amarilla" class="h-10">
       </div>
-      
-    
+  
       <h2 class="text-3xl font-bold text-center mb-4">Bienvenido</h2>
-      <p class="text-center text-gray-600 mb-6">Inicia sesión para comenzar a facturar</p>
+      <p class="text-center text-gray-600 mb-6">Regístrate para comenzar a facturar</p>
       
-      <!-- Formulario de login -->
+ 
       <form class="space-y-4" (ngSubmit)="onSubmit()">
         <div>
           <input 
@@ -29,14 +28,23 @@
             name="password"
             required>
         </div>
+        <div>
+          <input 
+            type="password" 
+            placeholder="Confirmar Contraseña" 
+            class="w-full px-4 rounded-2xl bg-[#EFEFEF] text-[#918C8C] py-2"
+            [(ngModel)]="confirmPassword"
+            name="confirmPassword"
+            required>
+        </div>
         <button 
           type="submit" 
           class="w-full bg-[#FC7516] text-white font-bold py-2 rounded-md hover:bg-yellow-600 transition-colors">
-          Iniciar sesión
+          Registrarse
         </button>
       </form>
       
-      <!-- Login con redes sociales -->
+      <!-- Registro con redes sociales -->
       <div class="mt-8 text-center">
         <p class="text-[#A7A7A7]">O inicia sesión con</p>
         <div class="flex justify-center space-x-4 mt-2 flex-col items-center w-full gap-y-4">
@@ -51,12 +59,13 @@
         </div>
       </div>
       
-     <!-- Link para iniciar sesión -->
-     <div class="mt-6 text-center">
+      <!-- Link para iniciar sesión -->
+      <div class="mt-6 text-center">
         <p class="text-gray-600">
-          ¿No tienes una cuenta? 
-          <a [routerLink]="'/register'" class="text-[#FC7516] font-bold hover:underline">Inicia Sesión</a>
+          ¿Ya tienes una cuenta? 
+          <a [routerLink]="'/'" class="text-[#FC7516] font-bold hover:underline">Inicia Sesión</a>
         </p>
       </div>
+      
     </div>
   </div>
