--- a/src/app/mainView-feature/page/mainView-page/mainView-page.component.html
+++ b/src/app/mainView-feature/page/mainView-page/mainView-page.component.html
@@ -1,10 +1,10 @@
-<div class="min-h-screen flex flex-col">
+<div class="w-full flex flex-col px-6">
   <!-- Navbar -->
   <app-nav-bar-home/>
 
   <!-- Main Content -->
-  <main class="flex-grow">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
+  <main class="flex-grow ">
+    <div class="px-6 sm:px-6 lg:px-8 py-6">
       <!-- Breadcrumb Navigation -->
       <div class="mb-2">
         <p class="text-sm text-gray-500">
