--- a/src/app/shared/components/navBarHome/navBarHome.component.html
+++ b/src/app/shared/components/navBarHome/navBarHome.component.html
@@ -1,42 +1,9 @@
-<!-- Navbar -->
-<nav class="">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-      <div class="flex justify-between h-16">
-          <div class="flex items-center">
-
-              <div class="flex-shrink-0 flex items-center">
-                  <img src="/img/image-removebg-preview (4) 1.png" alt="Logo Flecha Amarilla" class="h-12">
-                  <div class="ml-2">
-                      <div class="text-gray-800 font-bold text-sm">GRUPO</div>
-                      <div class="text-gray-800 font-bold text-lg">Flecha Amarilla</div>
-                  </div>
-              </div>
-
-              <div class="hidden sm:ml-16 sm:flex sm:space-x-8 ">
-                  <a href="#" class="border-transparent text-gray-800 hover:text-gray-700 inline-flex items-center px-1 pt-1 text-sm font-medium">
-                      INICIO
-                  </a>
-                  <a href="#" class="border-transparent text-gray-800 hover:text-gray-700 inline-flex items-center px-1 pt-1 text-sm font-medium">
-                      CHATBOT
-                  </a>
-                  <a href="#" class="border-transparent text-gray-800 hover:text-gray-700 inline-flex items-center px-1 pt-1 text-sm font-medium">
-                      CONTACTO
-                  </a>
-                  <a href="#" class="border-transparent text-gray-800 hover:text-gray-700 inline-flex items-center px-1 pt-1 text-sm font-medium">
-                      GFA
-                  </a>
-              </div>
-
-          </div>
-          
-          <div class="flex items-center">
-              <div class="flex items-center">
-                  <span class="mr-3 text-sm text-gray-700">Juan Hernandez</span>
-                  <div class="h-8 w-8 rounded-full bg-gray-200 flex items-center justify-center">
-                      <span class="text-gray-600 text-xs">JH</span>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-</nav>
+<nav class="w-full flex justify-between items-center py-4 px-6">
+    <div class="flex items-center">
+      <logo-flecha/>
+    </div>
+    <div class="flex items-center gap-x-24">
+      <nav-linkeables/>
+      <nav-perfil-user/>
+    </div>
+  </nav>
