--- a/src/app/mainView-feature/page/mainView-page/mainView-page.component.html
+++ b/src/app/mainView-feature/page/mainView-page/mainView-page.component.html
@@ -1,10 +1,10 @@
-<div class="w-full flex flex-col px-6">
+<div class="">
   <!-- Navbar -->
   <app-nav-bar-home/>
 
   <!-- Main Content -->
   <main class="flex-grow ">
-    <div class="px-6 sm:px-6 lg:px-8 py-6">
+    <div class="px-6 sm:px-20 lg:px-13 py-6">
       <!-- Breadcrumb Navigation -->
       <breadcrumb-navigation/>
 
