--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,4 +1,6 @@
-<div class="max-w-3xl mx-auto p-6 bg-white">
+<app-nav-bar-home/>
+
+<div class="max-w-7xl ml-20 mx-9 mt-20 p-6 bg-white">
   <div class="mb-10">
     <h1 class="text-4xl font-bold mb-2">Preguntas frecuentes</h1>
     <p class="text-gray-600 mb-2">
@@ -12,8 +14,8 @@
     @for (category of categories; track category.name) {
       <button
         (click)="selectCategory(category.name)"
-        class="px-5 py-2 rounded-full text-sm font-medium transition-colors"
-        [ngClass]="category.isActive ? 'bg-gray-900 text-white' : 'bg-white border border-gray-300 text-gray-700 hover:bg-gray-100'">
+        class="px-5 py-2 rounded-sm text-sm font-medium transition-colors"
+        [ngClass]="category.isActive ? 'bg-[#F26400] text-white' : 'bg-white border border-gray-300 text-gray-700 hover:bg-gray-100'">
         {{ category.name }}
       </button>
     }
