--- a/src/app/recoveryProcess/components/personal-data-form/personal-data-form.component.html
+++ b/src/app/recoveryProcess/components/personal-data-form/personal-data-form.component.html
@@ -1,6 +1,6 @@
 <!-- components/personal-data-form/personal-data-form.component.html -->
 
-<div class="w-full p-6">
+<div class=" ">
   <div class="mb-6">
     <p class="text-lg font-semibold">Verifica que todos tus datos personales sean correctos</p>
     <p class="text-gray-600 text-sm">Carga tu constancia de situación fiscal para poder cargar tus datos de manera más óptima</p>
@@ -43,7 +43,7 @@
               placeholder="37536"
               class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-1 focus:ring-amber-500 focus:border-amber-500"
             >
-            
+
           </div>
         </div>
 
