--- a/src/app/recoveryProcess/components/invoice-ready/invoice-ready.component.html
+++ b/src/app/recoveryProcess/components/invoice-ready/invoice-ready.component.html
@@ -1,8 +1,8 @@
 <!-- components/invoice-ready/invoice-ready.component.html -->
 
-<div class="w-full p-6">
+<div>
   <div class="mb-6">
-    <p class="text-lg font-semibold">Verifica que todos tus datos personales sean correctos</p>
+    <p class="text-lg font-medium">Verifica que todos tus datos personales sean correctos</p>
     <p class="text-gray-600 text-sm">Este proceso puede tardar hasta cinco minutos, si lo desea puede buscar su factura en el: MÓDULO DE RECUPERACIÓN</p>
   </div>
 
@@ -18,7 +18,7 @@
 
     <div class="flex items-start gap-4 mb-8">
       <div class="flex-shrink-0">
-        <img src="assets/zip-icon.png" alt="Archivo ZIP" class="w-10 h-10 object-contain">
+        <img src="img/carpeta-zip 1.svg" alt="Archivo ZIP" class="w-10 h-10 object-contain">
       </div>
       <p class="text-gray-700">Descarga el archivo zip donde encontrarás tu archivo .pdf y .xml, en caso de no poder descargarlo consulta en recuperación</p>
     </div>
