--- a/src/app/recoveryProcess/components/loading-state/loading-state.component.html
+++ b/src/app/recoveryProcess/components/loading-state/loading-state.component.html
@@ -1,8 +1,8 @@
 <!-- components/loading-state/loading-state.component.html -->
 
-<div class="w-full p-6">
+<div>
   <div class="mb-6">
-    <p class="text-lg font-semibold">{{ loadingMessage() }}</p>
+    <p class="text-lg font-medium">{{ loadingMessage() }}</p>
     <p class="text-gray-600 text-sm">{{ additionalInfo() }}</p>
   </div>
 
