--- a/src/app/shared/components/navBarHome/linkeables/linkeables.component.html
+++ b/src/app/shared/components/navBarHome/linkeables/linkeables.component.html
@@ -1,7 +1,7 @@
 <div class="hidden sm:ml-16 sm:flex sm:space-x-8 gap-x-6">
     @for (link of navLinks; track link.route) {
-      <a 
-        [routerLink]="link.route"
+      <a
+        [routerLink]="'/'+link.route"
         routerLinkActive="border-b-2 border-[#FC7516] text-[#FC7516]"
         [routerLinkActiveOptions]="{exact: true}"
         class="border-transparent text-black hover:text-gray-700 inline-flex items-center px-1 pt-1 text-sm font-bold">
