--- a/src/app/proccess-bill/templates/information-ticket-template/information-ticket-template.component.html
+++ b/src/app/proccess-bill/templates/information-ticket-template/information-ticket-template.component.html
@@ -1,7 +1,8 @@
 <section class="w-full flex flex-col">
     <h3 class="text-xl font-semibold">Verifica que todos tus datos sean correctos</h3>
     <p class="text-sm mt-1 mb-2">Carga tu constancia de situación fiscal para poder cargar tus datos de manera óptima</p>
-    <div class="bg-[#FFFFFF] border border-[#D5D5D5] w-full h-76 rounded-xl shadow shadow-black/10 py-2 px-4">
+    <div class="bg-[#FFFFFF] border border-[#D5D5D5] w-full  rounded-xl shadow shadow-black/10 py-3 px-7">
     <bill-form-ticket/>
+    <bill-complement-ine/>
     </div>
 </section>
