--- a/src/app/proccess-bill/templates/verificacion-template/verificacion-template.component.html
+++ b/src/app/proccess-bill/templates/verificacion-template/verificacion-template.component.html
@@ -3,9 +3,8 @@
     <p class="text-sm mt-1 mb-2">Carga tu constancia de situación fiscal para poder cargar tus datos de manera óptima</p>
     
     <!-- Integrar el componente app-basic-info -->
-    <app-basic-info
->
-    </app-basic-info>
+    <app-basic-info/>
+   
     
    
   </section>
